RESOLVED FIXED226020
$vm should have a function for checking if security assertions are enabled similar to $vm.assertEnabled
https://bugs.webkit.org/show_bug.cgi?id=226020
Summary $vm should have a function for checking if security assertions are enabled si...
Tuomas Karkkainen
Reported 2021-05-20 07:23:48 PDT
$vm should have a function for checking if security assertions are enabled similar to $vm.assertEnabled
Attachments
proposed patch (2.53 KB, patch)
2021-05-20 07:46 PDT, Tuomas Karkkainen
mark.lam: review+
ews-feeder: commit-queue-
rebased patch (2.51 KB, patch)
2021-06-07 03:15 PDT, Tuomas Karkkainen
no flags
Tuomas Karkkainen
Comment 1 2021-05-20 07:46:57 PDT
Created attachment 429172 [details] proposed patch
Mark Lam
Comment 2 2021-05-20 08:57:20 PDT
Comment on attachment 429172 [details] proposed patch r=me
EWS
Comment 3 2021-05-20 09:02:30 PDT
Tools/Scripts/svn-apply failed to apply attachment 429172 [details] to trunk. Please resolve the conflicts and upload a new patch.
Radar WebKit Bug Importer
Comment 4 2021-05-27 07:24:17 PDT
Tuomas Karkkainen
Comment 5 2021-06-07 03:15:46 PDT
Created attachment 430734 [details] rebased patch
EWS
Comment 6 2021-06-07 04:12:01 PDT
Committed r278553 (238551@main): <https://commits.webkit.org/238551@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430734 [details].
Note You need to log in before you can comment on or make changes to this bug.