$vm should have a function for checking if security assertions are enabled similar to $vm.assertEnabled https://bugs.webkit.org/show_bug.cgi?id=226020 <rdar://problem/78567619>

Patch by Tuomas Karkkainen <tuomas.webkit@apple.com> on 2021-06-07
Reviewed by Mark Lam.

Add method $vm.securityAssertEnabled() which parallels $vm.assertEnabled(), and allows
checking at runtime whether the current JavaScriptCore build has security assertions enabled.

* tools/JSDollarVM.cpp:

Canonical link: https://commits.webkit.org/238551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278553 268f45cc-cd09-0410-ab3c-d52691b4dbfc